--- a/plugin.xml
+++ b/plugin.xml
@@ -17,8 +17,8 @@
   <hook type="before_plugin_install" src="scripts/configurations/installDependencies.js" />
   <hook type="before_plugin_install" src="scripts/configurations/unzipAndCopyConfigurations.js" />
 
-  <preference name="APP_DOMAIN" default="/" />
-  <preference name="APP_PATH" default="/" />
+  <preference name="APP_DOMAIN" />
+  <preference name="APP_PATH" />
 
   <platform name="android">
     <hook type="after_plugin_install" src="scripts/crashlytics/android/after_plugin_install.js" />
